--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "Myapp" %></title>
+    <title><%= content_for(:title) || "PostBridge" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
@@ -22,7 +22,7 @@
     <header class="bg-white shadow">
       <div class="container mx-auto px-4 py-4 flex justify-between items-center">
         <div>
-          <%= link_to "Myapp", root_path, class: "text-xl font-bold text-red-600" %>
+          <%= link_to "PostBridge", root_path, class: "text-xl font-bold text-red-600" %>
         </div>
 
         <nav>
@@ -50,7 +50,7 @@
       </div>
     <% end %>
 
-    <main class="container mx-auto mt-10 px-5 flex">
+    <main class="mx-auto mt-10 px-5 w-full max-w-[1600px]">
       <%= yield %>
     </main>
   </body>
