--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,13 +39,15 @@
     </header>
 
     <% if flash[:notice] %>
-      <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded container mx-auto mt-4">
+      <div data-controller="flash" data-flash-timeout-value="3000" data-flash-direction-value="right"
+      class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded container mx-auto mt-4">
         <%= flash[:notice] %>
       </div>
     <% end %>
 
     <% if flash[:alert] %>
-      <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded container mx-auto mt-4">
+      <div data-controller="flash" data-flash-timeout-value="3000" data-flash-direction-value="left"
+      class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded container mx-auto mt-4">
         <%= flash[:alert] %>
       </div>
     <% end %>
